--- a/src/main/resources/fxml/CompetitionView.fxml
+++ b/src/main/resources/fxml/CompetitionView.fxml
@@ -29,7 +29,7 @@
                   <Label text="Płeć" />
                   <ChoiceBox fx:id="genderComboBox" prefHeight="25.0" prefWidth="39.0" />
                   <Button fx:id="addCompetitionButton" mnemonicParsing="false" onAction="#addCompetition" text="Dodaj" />
-                  <Button fx:id="deleteCompetitionButton" mnemonicParsing="false" onAction="#deleteCompetition" text="Usuń" />
+                  <Button fx:id="deleteCompetitionButton" mnemonicParsing="false" onAction="#removeCompetition" text="Usuń" />
                </children>
             </HBox>
          </children>
