--- a/src/main/resources/fxml/TrainerView.fxml
+++ b/src/main/resources/fxml/TrainerView.fxml
@@ -41,7 +41,7 @@
                   <ComboBox fx:id="clubComboBox2" onAction="#setTrainers" prefWidth="150.0" />
                   <Label text="Trener" />
                   <ComboBox fx:id="trainerComboBox" prefWidth="150.0" />
-                  <Button fx:id="deleteTrainerButton" mnemonicParsing="false" onAction="#deleteTrainer" text="Usuń" />
+                  <Button fx:id="deleteTrainerButton" mnemonicParsing="false" onAction="#removeTrainer" text="Usuń" />
                </children>
             </HBox>
          </children>
