--- a/src/main/resources/fxml/ContestView.fxml
+++ b/src/main/resources/fxml/ContestView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,9 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ContestController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ContestController">
    <children>
-      <VBox alignment="CENTER" prefHeight="150.0" prefWidth="100.0">
+      <VBox alignment="CENTER" prefHeight="100.0" prefWidth="100.0">
          <children>
             <Label text="Dodaj zawody">
                <font>
@@ -29,17 +28,6 @@
                   <DatePicker fx:id="dateField" />
                   <Button fx:id="addContestButton" mnemonicParsing="false" onAction="#addContest" text="Dodaj" />
                </children></HBox>
-            <Label text="Usuń zawody">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Label>
-            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="600.0" spacing="20.0">
-               <children>
-                  <ComboBox fx:id="contestComboBox" prefHeight="25.0" prefWidth="376.0" promptText="wybierz zawody do usunięcia" />
-                  <Button fx:id="deleteContestButton" mnemonicParsing="false" onAction="#removeContest" text="Usuń" />
-               </children>
-            </HBox>
          </children>
       </VBox>
       <TableView fx:id="contestTableView" onMouseClicked="#selectedInfo" prefHeight="200.0" prefWidth="800.0">
@@ -49,6 +37,7 @@
             <TableColumn fx:id="dateColumn" prefWidth="253.0" text="Data i godzina" />
         </columns>
       </TableView>
+      <Button fx:id="deleteContestButton" mnemonicParsing="false" onAction="#removeContest" text="Usuń zaznaczone" />
       <HBox prefHeight="220.0" prefWidth="800.0">
          <children>
             <TableView fx:id="competitorTableView" prefHeight="250.0" prefWidth="400.0">
