--- a/src/main/resources/fxml/MainBorderPane.fxml
+++ b/src/main/resources/fxml/MainBorderPane.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
@@ -38,10 +39,10 @@
                <font>
                   <Font name="System Bold" size="16.0" />
                </font></ToggleButton>
-            <ToggleButton fx:id="recordsButton" mnemonicParsing="false" onAction="#viewRecords" prefHeight="80.0" prefWidth="150.0" text="Rekordy" toggleGroup="$tables">
+            <Button fx:id="exitButton" mnemonicParsing="false" onAction="#exit" prefHeight="80.0" prefWidth="150.0" text="Wyjście">
                <font>
                   <Font name="System Bold" size="16.0" />
-               </font></ToggleButton>
+               </font></Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
