--- a/src/main/resources/fxml/WelcomeView.fxml
+++ b/src/main/resources/fxml/WelcomeView.fxml
@@ -7,7 +7,7 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="900.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Witamy w manadżerze zarządzania zawodami sportowymi!">
+      <Label text="Witamy w menadżerze zarządzania zawodami pływackimi!">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
