--- a/src/main/resources/styles/mainCSS.css
+++ b/src/main/resources/styles/mainCSS.css
@@ -29,7 +29,6 @@
 
 
     /*-fx-font-family: ;*/
-    /*-fx-font-family: "Roboto";*/
     -fx-font-size: 1.2em;
     -fx-font-weight: bold;
 }
@@ -43,4 +42,9 @@
 .root .toggle-button:pressed:hover {
     -fx-scale-y: 0.9;
     -fx-scale-x: 0.9;
+}
+
+.dialog-pane{
+    -fx-border-color:white;
+    -fx-border-width:1px;
 }
