--- a/src/main/resources/fxml/MainBorderPane.fxml
+++ b/src/main/resources/fxml/MainBorderPane.fxml
@@ -130,7 +130,7 @@
              </HBox>
              <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
                 <children>
-                   <Button mnemonicParsing="false" onAction="#logIn" prefHeight="30.0" prefWidth="100.0" text="zaloguj" />
+                   <Button fx:id="loginButton" mnemonicParsing="false" onAction="#logIn" prefHeight="30.0" prefWidth="100.0" text="zaloguj" />
                 </children>
              </HBox>
           </children>
