--- a/src/main/resources/fxml/CompetitorView.fxml
+++ b/src/main/resources/fxml/CompetitorView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CompetitorController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxControllers.CompetitorController">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
@@ -51,7 +51,7 @@
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0" spacing="20.0">
                <children>
                   <Label text="Klub" />
-                  <ComboBox fx:id="clubComboBox2" onAction="#setCompetitors" prefWidth="150.0" />
+                  <ComboBox fx:id="clubComboBox2" onAction="#setCompetitorsFromSelectedClub" prefWidth="150.0" />
                   <Button fx:id="removeeAllCompetitorsFromClubButton" mnemonicParsing="false" onAction="#removeAllCompetitorsFromClub" text="Usuń wszystkich" />
                   <Label text="Zawodnik" />
                   <ComboBox fx:id="competitorComboBox" prefWidth="150.0" />
@@ -60,7 +60,7 @@
             </HBox>
          </children>
       </VBox>
-      <TableView fx:id="competitorTableView" onMouseClicked="#selectedInfo" prefHeight="250.0" prefWidth="600.0">
+      <TableView fx:id="competitorTableView" onMouseClicked="#setRecordsForSelectedCompetitor" prefHeight="250.0" prefWidth="600.0">
         <columns>
           <TableColumn fx:id="nameColumn" prefWidth="230.0" text="Imię" />
           <TableColumn fx:id="surnameColumn" minWidth="0.0" prefWidth="213.0" text="Nazwisko" />
