--- a/src/main/resources/fxml/TrainerView.fxml
+++ b/src/main/resources/fxml/TrainerView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TrainerController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxControllers.TrainerController">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
@@ -38,7 +38,7 @@
             <HBox alignment="CENTER" prefHeight="40.0" prefWidth="800.0" spacing="20.0">
                <children>
                   <Label text="Klub" />
-                  <ComboBox fx:id="clubComboBox2" onAction="#setTrainers" prefWidth="150.0" />
+                  <ComboBox fx:id="clubComboBox2" onAction="#setTrainersFromSelectedClub" prefWidth="150.0" />
                   <Label text="Trener" />
                   <ComboBox fx:id="trainerComboBox" prefWidth="150.0" />
                   <Button fx:id="removeTrainerButton" mnemonicParsing="false" onAction="#removeTrainer" text="Usuń" />
