--- a/src/main/resources/fxml/CompetitionView.fxml
+++ b/src/main/resources/fxml/CompetitionView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxControllers.CompetitionController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxControllers.CompetitionController">
    <children>
       <VBox alignment="CENTER" prefHeight="100.0" prefWidth="100.0">
          <children>
@@ -44,13 +44,14 @@
       <Button fx:id="removeCompetitionButton" mnemonicParsing="false" onAction="#removeCompetition" text="Usuń zaznaczoną" />
       <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0" spacing="20.0">
          <children>
-            <Label text="Dodaj zaznaczoną do zawodów">
+            <Label text="Dodaj konkurencję do zawodów">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <ComboBox fx:id="contestComboBox" prefWidth="150.0" />
-            <Button fx:id="addCompetitionToContestButton" mnemonicParsing="false" onAction="#addCompetitionToContest" text="Dodaj" />
+            <ComboBox fx:id="contestComboBox" prefHeight="25.0" prefWidth="209.0" />
+            <Button fx:id="addCompetitionToContestButton" mnemonicParsing="false" onAction="#addCompetitionToContest" text="Dodaj zaznaczoną" />
+            <Button fx:id="addAllCompetitionsToContestButton" mnemonicParsing="false" onAction="#addAllCompetitionsToContest" text="Dodaj wszystkie" />
          </children>
       </HBox>
    </children>
